platform/core/renovate/templates/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: renovate
spec:
  endpointSelector:
    matchLabels:
      app: renovate
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
            - port: '53'
              protocol: TCP
          rules:
            dns:
              - matchPattern: '*'
    - toEntities:
        - world
